remove openmp_mutex for osx

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,7 +36,7 @@ requirements:
 #   - sundials Not yet ... Upgrade interface from IDAS (1.3.0) to current version of Sundials (5.4.1)
     - libopenblas
     - libgfortran5
-    - _openmp_mutex
+    - _openmp_mutex # [not osx]
     - blas
     - lapack
     - mkl
@@ -60,7 +60,7 @@ requirements:
 #   - sundials Not yet ... Upgrade interface from  IDAS (1.3.0) to current version of Sundials (5.4.1)
     - libopenblas
     - libgfortran5
-    - _openmp_mutex
+    - _openmp_mutex # [not osx]
     - blas
     - lapack
 #   Python bindings
