--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 86022590cc541ad05af40f5df313bd6aaad1c7083edde34089d315cc48d18b48
 
 build:
-  number: 6
+  number: 7
 # script: #Use the complex build.sh
 
 # superlu dependency is not (yet) available on windows. skip windows build for now
@@ -21,10 +21,10 @@ build:
 requirements:
   build:
     - {{ compiler('cxx') }}
-    - python
+    - python {{ python }}
 
   host:
-    - python
+    - python {{ python }}
     - pip
     - coolprop
     - qt-main
@@ -51,7 +51,7 @@ requirements:
     - et-xmlfile
 
   run:
-    - python
+    - python {{ python }}
     - coolprop
     - qt-main
     - boost
